// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly 1`] = `
<Button
  className="js-copy-to-clipboard no-select"
  data-clipboard-text="foo"
  innerRef={[Function]}
>
  copy
</Button>
`;

exports[`should display correctly 2`] = `
<Tooltip
  defaultVisible={true}
  overlay="copied_action"
  placement="bottom"
  trigger="manual"
>
  <Button
    className="js-copy-to-clipboard no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    copy
  </Button>
</Tooltip>
`;
